--- a/samples/CPPCLI/reference/projects/theemptycppproject.vs2017.v4_6_2.vcxproj
+++ b/samples/CPPCLI/reference/projects/theemptycppproject.vs2017.v4_6_2.vcxproj
@@ -43,22 +43,22 @@
   <PropertyGroup Label="UserMacros" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <TargetName>theemptycppproject</TargetName>
-    <OutDir>output\win32\debug\</OutDir>
-    <IntDir>temp\theemptycppproject\vs2017\v4_6_2\debug\</IntDir>
+    <OutDir>output\win32\Debug\</OutDir>
+    <IntDir>temp\theEmptyCPPProject\vs2017\v4_6_2\Debug\</IntDir>
     <TargetExt>.lib</TargetExt>
     <GenerateManifest>true</GenerateManifest>
     <LinkIncremental>false</LinkIncremental>
-    <OutputFile>output\win32\debug\theemptycppproject.lib</OutputFile>
+    <OutputFile>output\win32\Debug\theemptycppproject.lib</OutputFile>
     <IgnoreImportLibrary>false</IgnoreImportLibrary>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
     <TargetName>theemptycppproject</TargetName>
-    <OutDir>output\win32\release\</OutDir>
-    <IntDir>temp\theemptycppproject\vs2017\v4_6_2\release\</IntDir>
+    <OutDir>output\win32\Release\</OutDir>
+    <IntDir>temp\theEmptyCPPProject\vs2017\v4_6_2\Release\</IntDir>
     <TargetExt>.lib</TargetExt>
     <GenerateManifest>true</GenerateManifest>
     <LinkIncremental>false</LinkIncremental>
-    <OutputFile>output\win32\release\theemptycppproject.lib</OutputFile>
+    <OutputFile>output\win32\Release\theemptycppproject.lib</OutputFile>
     <IgnoreImportLibrary>false</IgnoreImportLibrary>
   </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
@@ -106,7 +106,7 @@
       <CallingConvention>Cdecl</CallingConvention>
       <CompileAs>Default</CompileAs>
       <AdditionalOptions>/Zc:__cplusplus</AdditionalOptions>
-      <ProgramDatabaseFileName>temp\theemptycppproject\vs2017\v4_6_2\debug\theemptycppproject_compiler.pdb</ProgramDatabaseFileName>
+      <ProgramDatabaseFileName>temp\theEmptyCPPProject\vs2017\v4_6_2\Debug\theEmptyCPPProject_compiler.pdb</ProgramDatabaseFileName>
       <RuntimeLibrary>MultiThreadedDebugDLL</RuntimeLibrary>
     </ClCompile>
     <Link>
@@ -118,7 +118,7 @@
       <TargetMachine>MachineX86</TargetMachine>
       <SubSystem/>
       <LinkTimeCodeGeneration>false</LinkTimeCodeGeneration>
-      <OutputFile>output\win32\debug\theemptycppproject.lib</OutputFile>
+      <OutputFile>output\win32\Debug\theemptycppproject.lib</OutputFile>
     </Lib>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
@@ -167,7 +167,7 @@
       <CallingConvention>Cdecl</CallingConvention>
       <CompileAs>Default</CompileAs>
       <AdditionalOptions>/Zc:__cplusplus</AdditionalOptions>
-      <ProgramDatabaseFileName>temp\theemptycppproject\vs2017\v4_6_2\release\theemptycppproject_compiler.pdb</ProgramDatabaseFileName>
+      <ProgramDatabaseFileName>temp\theEmptyCPPProject\vs2017\v4_6_2\Release\theEmptyCPPProject_compiler.pdb</ProgramDatabaseFileName>
       <RuntimeLibrary>MultiThreadedDLL</RuntimeLibrary>
     </ClCompile>
     <Link>
@@ -179,7 +179,7 @@
       <TargetMachine>MachineX86</TargetMachine>
       <SubSystem/>
       <LinkTimeCodeGeneration>false</LinkTimeCodeGeneration>
-      <OutputFile>output\win32\release\theemptycppproject.lib</OutputFile>
+      <OutputFile>output\win32\Release\theemptycppproject.lib</OutputFile>
     </Lib>
   </ItemDefinitionGroup>
   <ItemGroup>
