--- a/samples/ConfigureOrder/reference/projects/foobarproject.vcxproj
+++ b/samples/ConfigureOrder/reference/projects/foobarproject.vcxproj
@@ -32,12 +32,12 @@
   <PropertyGroup Label="UserMacros" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
     <TargetName>foobarproject</TargetName>
-    <OutDir>output\win32\release\</OutDir>
-    <IntDir>obj\foobarproject\win32\release\</IntDir>
+    <OutDir>output\win32\Release\</OutDir>
+    <IntDir>obj\FooBarProject\win32\Release\</IntDir>
     <TargetExt>.exe</TargetExt>
     <GenerateManifest>true</GenerateManifest>
     <LinkIncremental>false</LinkIncremental>
-    <OutputFile>output\win32\release\foobarproject.exe</OutputFile>
+    <OutputFile>output\win32\Release\foobarproject.exe</OutputFile>
     <IgnoreImportLibrary>false</IgnoreImportLibrary>
   </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
@@ -86,15 +86,15 @@
       <CallingConvention>Cdecl</CallingConvention>
       <CompileAs>Default</CompileAs>
       <AdditionalOptions>/Zc:__cplusplus</AdditionalOptions>
-      <ProgramDatabaseFileName>obj\foobarproject\win32\release\foobarproject_compiler.pdb</ProgramDatabaseFileName>
+      <ProgramDatabaseFileName>obj\FooBarProject\win32\Release\FooBarProject_compiler.pdb</ProgramDatabaseFileName>
       <RuntimeLibrary>MultiThreaded</RuntimeLibrary>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
-      <OutputFile>output\win32\release\foobarproject.exe</OutputFile>
+      <OutputFile>output\win32\Release\foobarproject.exe</OutputFile>
       <ShowProgress>NotSet</ShowProgress>
-      <ProgramDatabaseFile>output\win32\release\foobarproject.pdb</ProgramDatabaseFile>
+      <ProgramDatabaseFile>output\win32\Release\FooBarProject.pdb</ProgramDatabaseFile>
       <GenerateMapFile>true</GenerateMapFile>
       <MapExports>false</MapExports>
       <SwapRunFromCD>false</SwapRunFromCD>
@@ -119,7 +119,7 @@
       <IgnoreAllDefaultLibraries>false</IgnoreAllDefaultLibraries>
       <IgnoreSpecificDefaultLibraries></IgnoreSpecificDefaultLibraries>
       <LargeAddressAware>true</LargeAddressAware>
-      <MapFileName>output\win32\release\foobarproject.map</MapFileName>
+      <MapFileName>output\win32\Release\foobarproject.map</MapFileName>
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
