--- a/samples/NetCore/DotNetCoreFrameworkHelloWorld/reference/projects/helloworld/HelloWorld.vs2019.netcore3_1.csproj
+++ b/samples/NetCore/DotNetCoreFrameworkHelloWorld/reference/projects/helloworld/HelloWorld.vs2019.netcore3_1.csproj
@@ -17,8 +17,8 @@
     <DebugSymbols>true</DebugSymbols>
     <DebugType>full</DebugType>
     <Optimize>false</Optimize>
-    <OutputPath>output\anycpu\debug</OutputPath>
-    <IntermediateOutputPath>obj\anycpu\debug</IntermediateOutputPath>
+    <OutputPath>output\anycpu\Debug</OutputPath>
+    <IntermediateOutputPath>obj\anycpu\Debug</IntermediateOutputPath>
     <DefineConstants>DEBUG;TRACE</DefineConstants>
     <WarningLevel>4</WarningLevel>
     <TreatWarningsAsErrors>true</TreatWarningsAsErrors>
@@ -29,8 +29,8 @@
     <DebugSymbols>false</DebugSymbols>
     <DebugType>pdbonly</DebugType>
     <Optimize>true</Optimize>
-    <OutputPath>output\anycpu\release</OutputPath>
-    <IntermediateOutputPath>obj\anycpu\release</IntermediateOutputPath>
+    <OutputPath>output\anycpu\Release</OutputPath>
+    <IntermediateOutputPath>obj\anycpu\Release</IntermediateOutputPath>
     <DefineConstants>TRACE</DefineConstants>
     <WarningLevel>4</WarningLevel>
     <TreatWarningsAsErrors>true</TreatWarningsAsErrors>
