--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -18,7 +18,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        os: [ubuntu-latest, macos-latest, windows-latest]
+        os: [ubuntu-latest, macos-latest, windows-2019, windows-2022]
         framework: [net472, net5.0]
         configuration: [debug, release]
 
@@ -81,7 +81,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        os: [windows-latest] # only windows for now, but ideally should be all
+        os: [windows-2019] # only windows for now, but ideally should be all. TODO: add windows-2022
         framework: [net472, net5.0]
 
     steps:
@@ -112,7 +112,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        os: [ubuntu-latest, macos-latest, windows-latest]
+        os: [ubuntu-latest, macos-latest, windows-2019] # TODO: add windows-2022
         framework: [net472, net5.0]
         configuration: [debug, release]
 
