--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -295,10 +295,11 @@ jobs:
         working-directory: 'samples/HelloXCode'
         run: |
           mono --debug $SHARPMAKE_WIN_EXE "/sources('HelloXCode.Main.sharpmake.cs')" || $SHARPMAKE_UNIX_EXE "/sources('HelloXCode.Main.sharpmake.cs')"
-          xcodebuild -workspace codebase/temp/solutions/HelloXCode_mac.xcworkspace -configuration ${{ matrix.configuration }} -scheme "exe FastBuild"
+          set -o pipefail
+          xcodebuild -workspace codebase/temp/solutions/HelloXCode_mac.xcworkspace -configuration ${{ matrix.configuration }} -scheme "exe FastBuild" | xcpretty
           codebase/temp/bin/mac_${{ matrix.configuration }}_fastbuild/exe
-          xcodebuild -workspace codebase/temp/solutions/HelloXCode_mac.xcworkspace -configuration ${{ matrix.configuration }} -scheme exe_mac
-          xcodebuild -workspace codebase/temp/solutions/HelloXCode_mac.xcworkspace -configuration ${{ matrix.configuration }} -scheme exe_prelinked_mac
+          xcodebuild -workspace codebase/temp/solutions/HelloXCode_mac.xcworkspace -configuration ${{ matrix.configuration }} -scheme exe_mac | xcpretty
+          xcodebuild -workspace codebase/temp/solutions/HelloXCode_mac.xcworkspace -configuration ${{ matrix.configuration }} -scheme exe_prelinked_mac | xcpretty
           cd codebase/temp/bin/mac_${{ matrix.configuration }}
           DYLD_LIBRARY_PATH=. ./exe
 
